tests/http/snapshots/http__legacy_tiers__day_offline.snap
---
source: tests/http/legacy_tiers.rs
expression: "get(\"/channelid/11111/tiers/2026/3/1?mode=offline\").send().await"
---
GET /channelid/11111/tiers/2026/3/1?mode=offline
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "day": 1,
  "entries": [
    {
      "messages": 1,
      "rank15m": 1,
      "rank1m": 1,
      "rank30m": 1,
      "rank5m": 1,
      "rank60m": 1,
      "tier15m": "HT1",
      "tier1m": "HT1",
      "tier30m": "HT1",
      "tier5m": "HT1",
      "tier60m": "HT1",
      "tierScore": 50,
      "uniqueMessages": 1,
      "userId": "22222",
      "userLogin": null,
      "windows15m": 1,
      "windows1m": 1,
      "windows30m": 1,
      "windows5m": 1,
      "windows60m": 1
    },
    {
      "messages": 1,
      "rank15m": 2,
      "rank1m": 2,
      "rank30m": 2,
      "rank5m": 2,
      "rank60m": 2,
      "tier15m": "LT1",
      "tier1m": "LT1",
      "tier30m": "LT1",
      "tier5m": "LT1",
      "tier60m": "LT1",
      "tierScore": 45,
      "uniqueMessages": 1,
      "userId": "33333",
      "userLogin": null,
      "windows15m": 1,
      "windows1m": 1,
      "windows30m": 1,
      "windows5m": 1,
      "windows60m": 1
    }
  ],
  "month": 3,
  "timezone": "Europe/Moscow",
  "totalMessages": 2,
  "totalUniqueMessages": 2,
  "totalUsers": 2,
  "year": 2026
}
