tests/http/snapshots/http__legacy_tiers__sully_streams_rejects_paths_outside_the_cache.snap
---
source: tests/http/legacy_tiers.rs
expression: "get(\"/sully/..%2F..%2Fetc%2Fpasswd/2026\").send().await"
---
GET /sully/..%2F..%2Fetc%2Fpasswd/2026
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
