tests/http/snapshots/http__legacy_tiers__sully_streams_without_cache.snap
---
source: tests/http/legacy_tiers.rs
expression: "get(\"/sully/99999/2026\").send().await"
---
GET /sully/99999/2026
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
