tests/http/snapshots/http__legacy_tiers__year.snap
---
source: tests/http/legacy_tiers.rs
expression: "get(\"/channelid/11111/tiers/2026\").send().await"
---
GET /channelid/11111/tiers/2026
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "entries": [
    {
      "messages": 4,
      "rank15m": 1,
      "rank1m": 1,
      "rank30m": 1,
      "rank5m": 1,
      "rank60m": 1,
      "tier15m": "HT1",
      "tier1m": "HT1",
      "tier30m": "HT1",
      "tier5m": "HT1",
      "tier60m": "HT1",
      "tierScore": 50,
      "uniqueMessages": 4,
      "userId": "22222",
      "userLogin": null,
      "windows15m": 4,
      "windows1m": 4,
      "windows30m": 4,
      "windows5m": 4,
      "windows60m": 4
    },
    {
      "messages": 2,
      "rank15m": 2,
      "rank1m": 2,
      "rank30m": 2,
      "rank5m": 2,
      "rank60m": 2,
      "tier15m": "LT1",
      "tier1m": "LT1",
      "tier30m": "LT1",
      "tier5m": "LT1",
      "tier60m": "LT1",
      "tierScore": 45,
      "uniqueMessages": 2,
      "userId": "33333",
      "userLogin": null,
      "windows15m": 2,
      "windows1m": 2,
      "windows30m": 2,
      "windows5m": 2,
      "windows60m": 2
    }
  ],
  "timezone": "Europe/Moscow",
  "totalMessages": 6,
  "totalUniqueMessages": 6,
  "totalUsers": 2,
  "year": 2026
}
